--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Home</title>
 </head>
 <body>
+    <h1>Home</h1>
     <a href="/signup">Sign up</a>
+    <a href="/signin">Sign in</a>
 </body>
 </html>
