--- a/public/signin.html
+++ b/public/signin.html
@@ -6,8 +6,8 @@
     <title>Signup Page</title>
 </head>
 <body>
-    <h1>Sign up</h1>
-    <form action="/signup" method="POST">
+    <h1>Sign in</h1>
+    <form action="/signin" method="POST">
         <div>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
@@ -17,7 +17,7 @@
             <input type="password" id="password" name="password" required>
         </div>
         <div>
-            <button type="submit">Sign Up</button>
+            <button type="submit">Sign in</button>
         </div>
     </form>
 </body>
