feat: add the backlinks to signup and signin pages

--- a/public/signup.html
+++ b/public/signup.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Sign up</h1>
+    <a href="/signin">sign in</a>
     <form action="/signup" method="POST">
         <div>
             <label for="email">Email:</label>
