--- a/public/signin.html
+++ b/public/signin.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Sign in</h1>
+    <a href="/signup">sign up</a>
     <form action="/signin" method="POST">
         <div>
             <label for="email">Email:</label>
