feat: add the login with discord button

--- a/public/signup.html
+++ b/public/signup.html
@@ -20,6 +20,14 @@
         <div>
             <button type="submit">Sign Up</button>
         </div>
+        <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=86728315176-gdssg02lghdu48nqi07m885kgo0fnmmv.apps.googleusercontent.com&redirect_uri=http://localhost:3000/auth/google/callback&response_type=code&scope=profile email">
+            Login with Google
+        </a>
+        
+        <a href="https://discord.com/oauth2/authorize?client_id=1329038149267099779&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fauth%2Fdiscord%2Fcallback&scope=identify+email">
+            Login with Discord
+        </a>
+        
     </form>
 </body>
 </html>
